--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
       div {
         font-family: sans-serif;
         color: red;
-        background: yellow;
+        background: green;
         width: 75%;
       }
 </style>
