--- a/style.css
+++ b/style.css
@@ -23,4 +23,8 @@
         background: rgb(255,214,255);
             }
       }
+
+      img[src]{
+            border: 5px solid brown;
+}
 </style>
