--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
         width: 75%;
         a:hover a:active a:focus {
         background: rgb(255,214,255);
-            }
+            };
       }
 
       img[src]{
