--- a/style.css
+++ b/style.css
@@ -24,10 +24,12 @@
             };
       }
 
+<!--
       img[src]{
             border: 5px solid brown;
             align: center;
 }
+-->
 
       #logo {
             animation-name: logo-animation;
