--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@
             };
       }
 
-      img[src="drawing.png"]{
+      img[src="drawing1.png"]{
             border: 5px solid brown;
             align: center;
 }
